name:                mu0
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/m1dnight/mu0
license:             BSD3
license-file:        LICENSE
author:              Christophe De Troyer
maintainer:          christophe@call-cc.be
copyright:           2017 Christophe De Troyer
category:            Virtual Machine
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md,
                     src/Parser.y,
                     src/Lexer.x


executable mu0
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       array,
                       binary,
                       bytestring,
                       containers,
                       mtl,
                       transformers,
                       pretty-hex


  build-tools:         happy,alex
  other-modules:       Lexer,Reader, Parser, AST, Assembler, Util
